test/error/unary.ss
var x = "hello";
var y = 3;
x + y;
# -> type error
